[package]
name = "arwarehouse_pathfinding"
version = "0.1.0"
edition = "2021"
authors = ["Hoang Nguyen <kqn5278@psu.edu>"]
description = "Pathfinding algorithm for the AR warehouse project"
# license = ""
# repository = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
array2d = "0.3.0"
serde = { version = "1.0.159", features = ["derive"] }
serde-wasm-bindgen = "0.5.0"
wasm-bindgen = { version = "0.2.84" }
